--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>サンプル</title>
+    <title>ずいずい</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
     <div class="main">
       <div class="container">
-        <h1>このページはサンプルです!!!</h1>
+        <h1>このページはサンプルですよー!!!</h1>
         <p>ここからオリジナルのWebページを作成していきましょう！</p>
       </div>
     </div>
