--- a/index.html
+++ b/index.html
@@ -2,15 +2,52 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>ずいずい</title>
+    <title>S劇版RENT非公式サイト</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
+    <header>
+      <h1>RENT</h1>
+      <a url="#">さいたま市民劇団</a>
+    </header>
     <div class="main">
-      <div class="container">
-        <h1>このページはサンプルですよー!!!</h1>
-        <p>ここからオリジナルのWebページを作成していきましょう！</p>
+      <div class="top-wrapper">
+        <div class="message">
+          <h1>諦めないで　あなたは、生きている。</h1>
+        </div>
+        <div class="main-picture">
+          <img src="RENT集合写真.jpg">
+        </div>
+        <div class="sub-message">
+          <h2 class="story">の物語</h2>
+          <div class="title">
+            <h2>さいたま市民劇団第７回記念公演</h2>
+            <h1>ミュージカル「RENT」</h1>
+          </div>
+        </div>
       </div>
+      <div class="casting-wrapper">
+        <p>cast</p>
+        <div class="casting-item">
+          <img src=".ipg">
+          <p>マーク(matinee)</p>
+          <p>宮内 僚</p>
+
+        </div>
+      </div>
+      <div class="contents">
+        <div class="date">
+          <h1>２０１７.１２.２４[日] 浦和コミュニティセンター 10階多目的ホール</h1>
+        </div>
+      </div>
+<!--　一応残しておくか。
+      <div class="container">
+
+      </div>
+-->
     </div>
+    <footer>
+
+    </footer>
   </body>
 </html>
