--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <img src="RENT集合写真.jpg">
         </div>
         <div class="sub-message">
-          <h2 class="story">の物語</h2>
+          <h2 class="story">物語は、1989年の12月24日に始まる。</h2>
           <div class="title">
             <h2>さいたま市民劇団第７回記念公演</h2>
             <h1>ミュージカル「RENT」</h1>
@@ -29,10 +29,54 @@
       <div class="casting-wrapper">
         <p>cast</p>
         <div class="casting-item">
-         
+          <img src=".ipg">
           <p>マーク(matinee)</p>
           <p>宮内 僚</p>
-
+        </div>
+        <div class="casting-item">
+          <img src=".ipg">
+          <p>マーク(soiree)</p>
+          <p>野堀 貴之</p>
+        </div>
+        <div class="casting-item">
+          <img src=".ipg">
+          <p>ロジャー</p>
+          <p>青井 雅広</p>
+        </div>
+        <div class="casting-item">
+          <img src=".ipg">
+          <p>ミミ</p>
+          <p>蛭間 美帆</p>
+        </div>
+        <div class="casting-item">
+          <img src=".ipg">
+          <p>コリンズ</p>
+          <p>雅詠</p>
+        </div>
+        <div class="casting-item">
+          <img src=".ipg">
+          <p>エンジェル(matinee)</p>
+          <p>高篠 隼人</p>
+        </div>
+        <div class="casting-item">
+          <img src=".ipg">
+          <p>エンジェル(soiree)</p>
+          <p>内田 充昭</p>
+        </div>
+        <div class="casting-item">
+          <img src=".ipg">
+          <p>モーリーン</p>
+          <p>柴崎 真理奈</p>
+        </div>
+        <div class="casting-item">
+          <img src=".ipg">
+          <p>ジョアンヌ</p>
+          <p>染谷 ゆき</p>
+        </div>
+        <div class="casting-item">
+          <img src=".ipg">
+          <p>ベニー</p>
+          <p>長谷川 光</p>
         </div>
       </div>
       <div class="contents">
