--- a/index.html
+++ b/index.html
@@ -29,52 +29,52 @@
       <div class="casting-wrapper">
         <p>cast</p>
         <div class="casting-item">
-          <img src=".ipg">
+          <img src="ryo.jpg">
           <p>マーク(matinee)</p>
           <p>宮内 僚</p>
         </div>
         <div class="casting-item">
-          <img src=".ipg">
+          <img src="takayuki.jpg">
           <p>マーク(soiree)</p>
           <p>野堀 貴之</p>
         </div>
         <div class="casting-item">
-          <img src=".ipg">
+          <img src="masahiro.jpg">
           <p>ロジャー</p>
           <p>青井 雅広</p>
         </div>
         <div class="casting-item">
-          <img src=".ipg">
+          <img src="miho.jpg">
           <p>ミミ</p>
           <p>蛭間 美帆</p>
         </div>
         <div class="casting-item">
-          <img src=".ipg">
+          <img src="masanaga.jpg">
           <p>コリンズ</p>
           <p>雅詠</p>
         </div>
         <div class="casting-item">
-          <img src=".ipg">
+          <img src="hayato.jpg">
           <p>エンジェル(matinee)</p>
           <p>高篠 隼人</p>
         </div>
         <div class="casting-item">
-          <img src=".ipg">
+          <img src="mitsuaki.jpg">
           <p>エンジェル(soiree)</p>
           <p>内田 充昭</p>
         </div>
         <div class="casting-item">
-          <img src=".ipg">
+          <img src="marina.jpg">
           <p>モーリーン</p>
           <p>柴崎 真理奈</p>
         </div>
         <div class="casting-item">
-          <img src=".ipg">
+          <img src="yuki.jpg">
           <p>ジョアンヌ</p>
           <p>染谷 ゆき</p>
         </div>
         <div class="casting-item">
-          <img src=".ipg">
+          <img src="hikaru.jpg">
           <p>ベニー</p>
           <p>長谷川 光</p>
         </div>
@@ -86,7 +86,6 @@
       </div>
 <!--　一応残しておくか。
       <div class="container">
-
       </div>
 -->
     </div>
