--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <h2 class="story">物語は、1989年の12月24日に始まる。</h2>
           <div class="title">
             <h2>さいたま市民劇団第７回記念公演</h2>
-            <h1>ミュージカル「RENT」</h1>
+            <h1>ミュージカル<span>「RENT」</span></h1>
           </div>
         </div>
       </div>
